# example-weston-standalone

./: PLAN.md  README.md  VENDOR.md  meson.build  meson_options.txt
.github/workflows/: ci.yml
containers/: Containerfile.build
data/: meson.build  westonite.desktop  westonite.ini.example
desktop-shell/: meson.build  shell.c  shell.h
docs/: desktop-shell-capabilities.md  e2e-test-plan.md  frontend-capabilities.md  maintenance-layer-plan.md  phase0-findings.md  rust-migration-plan.md  rust-reviewers-guide.md
frontend/: main.c  meson.build  text-backend.c  weston.h
protocol/: meson.build  weston-desktop-shell.xml
rpm/: westonite.spec
scripts/: e2e-test.sh  rpm-build.sh  rpm-install-test.sh  smoke-test.sh
shared/: meson.build
tests/e2e/: conftest.py  pytest.ini  test_children.py  test_cli.py  test_lifecycle.py  test_outputs.py  test_shell_background.py  test_shell_windows.py  test_xwayland.py
tests/e2e/clients/: meson.build  wtest-client.c  wtest-xclient.c
tests/e2e/support/: client.py  compositor.py  image.py  vncclient.py
